add style and html/css

--- a/5. Дизайн и оформление кода/Лекция 5. Дизайн и оформление кода.ipynb
+++ b/5. Дизайн и оформление кода/Лекция 5. Дизайн и оформление кода.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "source": [
+    "На практике мы читаем свой и чужой код в среднем в раз 10 больше, чем его пишем. Поэтому опытных и востребованных разработчиков отличает то, что они могут писать код, который понятен всем. Здесь мы разберем основные моменты, связанные с оформлением нашего кода на Python.\n",
+    "\n",
+    "Вариаций написать код для какой-либо задачи может быть бесконечное множество. Однако, существуют некоторые внегласные правила (что-то типа ГОСТ), соблюдение которых позволит меньше времени тратить на прочтение и понимание как своего старого, так и любого чужого кода.\n",
+    "\n",
+    "**PEP 8** создан на основе рекомендаций Гуидо ван Россума с добавлениями от Барри. Если где-то возникал конфликт, мы выбирали стиль Гуидо. И, конечно, этот PEP может быть неполным (фактически, он, наверное, никогда не будет закончен).\n",
+    "\n",
+    "Тим Питерс разработал 20 принципов, следование которым позволяет писать добротный и понятный всем код - **Zen of Python**"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -17,7 +35,284 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Основное из Python-дзен"
+    "Это руководство о согласованности и единстве. Согласованность с этим руководством очень важна. Согласованность внутри одного проекта еще важнее. А согласованность внутри модуля или функции — самое важное. Но важно помнить, что иногда это руководство неприменимо, и понимать, когда можно отойти от рекомендаций. Когда вы сомневаетесь, просто посмотрите на другие примеры и решите, какой выглядит лучше.\n",
+    "\n",
+    "***Две причины для того, чтобы нарушить данные правила:***\n",
+    "\n",
+    "1. Когда применение правила сделает код менее читаемым даже для того, кто привык читать код, который следует правилам.\n",
+    "2. Чтобы писать в едином стиле с кодом, который уже есть в проекте и который нарушает правила (возможно, в силу исторических причин) — впрочем, это возможность переписать чужой код."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Внешний вид кода\n",
+    "\n",
+    "### Отступы\n",
+    "\n",
+    "Используем 4 пробела. Закрывающие круглые/квадратные/фигурные скобки в многострочных конструкциях могут находиться под первым непробельным символом последней строки списка, например:\n",
+    "```python\n",
+    "my_list = [\n",
+    "    1, 2, 3,\n",
+    "    4, 5, 6,\n",
+    "    ]\n",
+    "result = some_function_that_takes_arguments(\n",
+    "    'a', 'b', 'c',\n",
+    "    'd', 'e', 'f',\n",
+    "    )\n",
+    "```\n",
+    "\n",
+    "Правильно оформленный вариант отсупов. Больше отступов включено для отличения его от остальных:\n",
+    "```python\n",
+    "def long_function_name(\n",
+    "        var_one, var_two, var_three,\n",
+    "        var_four):\n",
+    "    print(var_one)\n",
+    "```\n",
+    "Выровнено по открывающему разделителю:\n",
+    "```python\n",
+    "foo = long_function_name(var_one=1, var_two=2,\n",
+    "                         var_three=3, var_four=4)\n",
+    "```\n",
+    "\n",
+    "Используем пробелы вместо табуляции.\n",
+    "\n",
+    "### Максимальная длина строки\n",
+    "\n",
+    "Максимум - 79 символов. Если в строке комментарии или описание, то сокращаем до 72 символов. Нам нужно писать код не в ширь, а в глубину. Таким образом удобно сравнивать коды из разных файлов.\n",
+    "\n",
+    "Длинные строки переносим при помощи круглых, квадратных или фигурных скобок (как в примере выше). Символов \\ не рекомендуется пользоваться, однако и не запрещается. Если есть *логические операторы*, то мы их оставляем в конце строки, а не в начале.\n",
+    "```python\n",
+    "class Rectangle(Blob):\n",
+    "\n",
+    "    def __init__(self, width, height,\n",
+    "                 color='black', emphasis=None, highlight=0):\n",
+    "        if (width == 0 and height == 0 and\n",
+    "                color == 'red' and emphasis == 'strong' or\n",
+    "                highlight > 100):\n",
+    "```\n",
+    "### Пустые строки\n",
+    "\n",
+    "Отделяйте функции верхнего уровня и определения классов двумя пустыми строками.\n",
+    "Определения методов внутри класса разделяются одной пустой строкой.\n",
+    "Используйте пустые строки в функциях, чтобы указать логические разделы.\n",
+    "\n",
+    "### Кодировка - строго UTF8!\n",
+    "\n",
+    "### Импорты\n",
+    "\n",
+    "Каждый импорт, как правило, должен быть на отдельной строке.\n",
+    "Импорты всегда помещаются в начале файла, сразу после комментариев к модулю и строк документации, и перед объявлением констант.\n",
+    "\n",
+    "Импорты должны быть сгруппированы в следующем порядке:\n",
+    "- импорты из стандартной библиотеки\n",
+    "- импорты сторонних библиотек\n",
+    "- импорты модулей текущего проекта"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Пробелы в выражениях и инструкциях\n",
+    "\n",
+    "### Избегаем пробелы:\n",
+    "- внутри круглых, квадратных скобок. Например, так делать нельзя\n",
+    "- непосредственно перед запятой, точкой с запятой или двоеточием\n",
+    "- сразу перед открывающей скобкой, после которой начинается список аргументов при вызове функции\n",
+    "- сразу перед открывающей скобкой, после которой следует индекс или срез\n",
+    "- использование более одного пробела вокруг оператора присваивания (или любого другого) для того, чтобы выровнять его с другим\n",
+    "\n",
+    "### Рекомендации\n",
+    "- всегда окружайте эти бинарные операторы одним пробелом с каждой стороны: присваивания (=, +=, -= и другие), сравнения (==, <, >, !=, <>, <=, >=, in, not in, is, is not), логические (and, or, not).\n",
+    "- если используются операторы с разными приоритетами, попробуйте добавить пробелы вокруг операторов с самым низким приоритетом. Используйте свои собственные суждения, однако, никогда не используйте более одного пробела, и всегда используйте одинаковое количество пробелов по обе стороны бинарного оператора.\n",
+    "- не используйте пробелы вокруг знака =, если он используется для обозначения именованного аргумента или значения параметров по умолчанию.\n",
+    "- не используйте составные инструкции (несколько команд в одной строке)."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Комментарии\n",
+    "\n",
+    "Комментарии, противоречащие коду, хуже, чем отсутствие комментариев. Всегда исправляйте комментарии, если меняете код!\n",
+    "\n",
+    "Комментарии должны являться законченными предложениями. Если комментарий — фраза или предложение, первое слово должно быть написано с большой буквы, если только это не имя переменной, которая начинается с маленькой буквы (никогда не изменяйте регистр переменной!).\n",
+    "\n",
+    "Абзацы внутри блока комментариев разделяются строкой, состоящей из одного символа #.\n",
+    "\n",
+    "Нужно стараться реже использовать строчные комментарии. Отделяются они минимум двумя пробелами после кода. Начинаются с символа # и одним пробелом. Если такой комментарий очевиден, то лучше его не писать.\n",
+    "\n",
+    "### Документация\n",
+    "\n",
+    "Пишите документацию для всех публичных модулей, функций, классов, методов. Строки документации необязательны для приватных методов, но лучше написать, что делает метод. Комментарий нужно писать после строки с def.\n",
+    "Подробней о документировании написано в [PEP257](https://pythonworld.ru/osnovy/dokumentirovanie-koda-v-python-pep-257.html)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Наименование объектов\n",
+    "\n",
+    "Никогда не используйте символы l (маленькая латинская буква «эль»), O (заглавная латинская буква «о») или I (заглавная латинская буква «ай») как однобуквенные идентификаторы.\n",
+    "\n",
+    "### Модули и пакеты\n",
+    "Модули должны иметь короткие имена, состоящие из маленьких букв. Можно использовать символы подчеркивания, если это улучшает читабельность. То же самое относится и к именам пакетов, однако в именах пакетов не рекомендуется использовать символ подчёркивания.\n",
+    "\n",
+    "### Классы - CamelCase\n",
+    "### Исключения - CamelCase либо Error в конце имени\n",
+    "\n",
+    "### Функции - snow_case\n",
+    "\n",
+    "### Аргументы функций\n",
+    "Всегда используйте self в качестве первого аргумента метода экземпляра объекта.\n",
+    "\n",
+    "Всегда используйте cls в качестве первого аргумента метода класса.\n",
+    "\n",
+    "Если имя аргумента конфликтует с зарезервированным ключевым словом python, обычно лучше добавить в конец имени символ подчеркивания, чем исказить написание слова или использовать аббревиатуру. Таким образом, class_ лучше, чем clss. (Возможно, хорошим вариантом будет подобрать синоним).\n",
+    "\n",
+    "### Имена методов и переменных экземпляров классов\n",
+    "Используем стиль как и для функций - snow_case.\n",
+    "Используем один символ подчёркивания перед именем для непубличных методов и атрибутов.\n",
+    "Чтобы избежать конфликтов имен с подклассами, используйте два ведущих подчеркивания.\n",
+    "\n",
+    "### Константы - все буквы большие (CONST)\n",
+    "\n",
+    "### Проектирование наследования\n",
+    "\n",
+    "Обязательно решите, каким должен быть метод класса или экземпляра класса (далее - атрибут) — публичный или непубличный. Если вы сомневаетесь, выберите непубличный атрибут. Потом будет проще сделать его публичным, чем наоборот.\n",
+    "\n",
+    "Публичные атрибуты — это те, которые будут использовать другие программисты, и вы должны быть уверены в отсутствии обратной несовместимости. Непубличные атрибуты, в свою очередь, не предназначены для использования третьими лицами, поэтому вы можете не гарантировать, что не измените или не удалите их.\n",
+    "\n",
+    "Мы не используем термин \"приватный атрибут\", потому что на самом деле в python таких не бывает.\n",
+    "\n",
+    "Другой тип атрибутов классов принадлежит так называемому API подклассов (в других языках они часто называются protected). Некоторые классы проектируются так, чтобы от них наследовали другие классы, которые расширяют или модифицируют поведение базового класса. Когда вы проектируете такой класс, решите и явно укажите, какие атрибуты являются публичными, какие принадлежат API подклассов, а какие используются только базовым классом.\n",
+    "\n",
+    "Теперь сформулируем рекомендации:\n",
+    "\n",
+    "Открытые атрибуты не должны иметь в начале имени символа подчеркивания.\n",
+    "\n",
+    "Если имя открытого атрибута конфликтует с ключевым словом языка, добавьте в конец имени один символ подчеркивания. Это более предпочтительно, чем аббревиатура или искажение написания (однако, у этого правила есть исключение — аргумента, который означает класс, и особенно первый аргумент метода класса (class method) должен иметь имя cls).\n",
+    "\n",
+    "Назовите простые публичные атрибуты понятными именами и не пишите сложные методы доступа и изменения (accessor/mutator, get/set, — прим. перев.) Помните, что в python очень легко добавить их потом, если потребуется. В этом случае используйте свойства (properties), чтобы скрыть функциональную реализацию за синтаксисом доступа к атрибутам.\n",
+    "\n",
+    "Постарайтесь избавиться от побочных эффектов, связанным с функциональным поведением; впрочем, такие вещи, как кэширование, вполне допустимы.\n",
+    "\n",
+    "Избегайте использования вычислительно затратных операций, потому что из-за записи с помощью атрибутов создается впечатление, что доступ происходит (относительно) быстро.\n",
+    "\n",
+    "Если вы планируете класс таким образом, чтобы от него наследовались другие классы, но не хотите, чтобы подклассы унаследовали некоторые атрибуты, добавьте в имена два символа подчеркивания в начало, и ни одного — в конец. Механизм изменения имен в python сработает так, что имя класса добавится к имени такого атрибута, что позволит избежать конфликта имен с атрибутами подклассов.\n",
+    "\n",
+    "Примечание 1: Будьте внимательны: если подкласс будет иметь то же имя класса и имя атрибута, то вновь возникнет конфликт имен.\n",
+    "\n",
+    "Примечание 2: Механизм изменения имен может затруднить отладку или работу с __getattr__(), однако он хорошо документирован и легко реализуется вручную.\n",
+    "\n",
+    "Примечание 3: Не всем нравится этот механизм, поэтому старайтесь достичь компромисса между необходимостью избежать конфликта имен и возможностью доступа к этим атрибутам.\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Исключения\n",
+    "\n",
+    "Наследуйте свой класс исключения от Exception, а не от BaseException. Прямое наследование от BaseException зарезервировано для исключений, которые не следует перехватывать.\n",
+    "Когда код перехватывает исключения, перехватывайте конкретные ошибки вместо простого выражения except:.\n",
+    "Простое написание \"except:\" также перехватит и SystemExit, и KeyboardInterrupt, что породит проблемы, например, сложнее будет завершить программу нажатием control+C. Если вы действительно собираетесь перехватить все исключения, пишите \"except Exception:\". Хорошим правилом является ограничение использования \"except:\", кроме двух случаев:\n",
+    "\n",
+    "- если обработчик выводит пользователю всё о случившейся ошибке; по крайней мере, пользователь будет знать, что произошла ошибка.\n",
+    "- если нужно выполнить некоторый код после перехвата исключения, а потом вновь \"бросить\" его для обработки где-то в другом месте. Обычно же лучше пользоваться конструкцией \"try...finally\".\n",
+    "\n",
+    "Постарайтесь заключать в каждую конструкцию try...except минимум кода, чтобы легче отлавливать ошибки. Опять же, это позволяет избежать замаскированных ошибок.\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Прочие рекомендации\n",
+    "- Сравнения с None должны обязательно выполняться с использованием операторов is или is not, а не с помощью операторов сравнения.\n",
+    "- При реализации методов сравнения, лучше всего реализовать все 6 операций сравнения (__eq__, __ne__, __lt__, __le__, __gt__, __ge__), чем полагаться на то, что другие программисты будут использовать только конкретный вид сравнения.\n",
+    "- Всегда используйте выражение def, а не присваивание лямбда-выражения к имени.\n",
+    "```python\n",
+    "def f(x): return x * 2  # правильно\n",
+    "f = lambda x: x * 2  # неправильно\n",
+    "```\n",
+    "\n",
+    "- Когда ресурс является локальным на участке кода, используйте выражение with для того, чтобы после выполнения он был очищен оперативно и надёжно.\n",
+    "- Пользуйтесь ''.startswith() и ''.endswith() вместо обработки срезов строк для проверки суффиксов или префиксов.\n",
+    "- Сравнение типов объектов нужно делать с помощью isinstance(), а не прямым сравнением типов:\n",
+    "```python\n",
+    "if isinstance(obj, int):  # правильно\n",
+    "if type(obj) is type(1):  # неправильно\n",
+    "```\n",
+    "\n",
+    "- Для последовательностей (строк, списков, кортежей) используйте тот факт, что пустая последовательность есть false:\n",
+    "```python\n",
+    "if not seq:  # правильно\n",
+    "if seq:  # правильно\n",
+    "if len(seq)  # неправильно\n",
+    "if not len(seq)  # неправильно\n",
+    "```\n",
+    "\n",
+    "- Не сравнивайте логические типы с True и False с помощью ==:\n",
+    "```python\n",
+    "if greeting:  # правильно\n",
+    "if greeting is True  # правильно\n",
+    "if greeting == True  # неправильно\n",
+    "```\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Python-дзен"
    ],
    "metadata": {
     "collapsed": false,
@@ -65,30 +360,6 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Правильно оформляем функции\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Правильно оформляем классы"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
     }
    }
   }
