add html/css materials

--- a/HTML-CSS/Лекция. HTML.ipynb
+++ b/HTML-CSS/Лекция. HTML.ipynb
@@ -130,7 +130,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Аттрибуты\n",
+    "## Аттрибуты\n",
     "\n",
     "Аттрибуты предоставляют дополнительную информацию об элементах и тэгах. Они располагаются внутри тэгов:\n",
     "```html\n",
@@ -159,6 +159,185 @@
     "<img src=\"first_image.png\" border\"1px\" /> - указали границу рисунка\n",
     "\n",
     "```"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Таблицы"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "```html\n",
+    "<table border=\"2px\">  - открывающий тэг таблицы, аттрибут border отвечает за размер рамки таблицы\n",
+    "   <tr>  - строка таблицы\n",
+    "      <td></td>  - столбец таблицы для данной строки\n",
+    "      <td></td>\n",
+    "      <td></td>\n",
+    "   </tr>  - закрывающий тэг строки таблицы\n",
+    "</table>\n",
+    "```\n",
+    "Аттрибуты таблицы:\n",
+    "```html\n",
+    "colspan - объединение столбцов в один.\n",
+    "bgcolor - цвет ячейки\n",
+    "```"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Ссылки\n",
+    "\n",
+    "```html\n",
+    "<a href=\"\"> </a> - указываем ссылку на файл или другую веб-страницу\n",
+    "```\n",
+    "\n",
+    "Аттрибуты ссылок:\n",
+    "```html\n",
+    "target = \"_blank\" - открыть ссылку в новой вкладке\n",
+    "```"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Блочные и встроенные элементы\n",
+    "\n",
+    "Блочные элементы начинаются с новой строки:\n",
+    "```html\n",
+    "h1, form, li, ol, ul, p, pre, table, div и т.д.\n",
+    "```\n",
+    "\n",
+    "Встроенные элементы нормально отображаются без разрыва строки:\n",
+    "```html\n",
+    "b, a, strong, img, input, em, span и т.д.\n",
+    "```\n",
+    "\n",
+    "Элемент ```div``` - блочный. Его часто используют как контейнер для других HTML-элементов.\n",
+    "\n",
+    "Элемент ```span``` - встроенный. Его часто используют как контейнер для текста.\n",
+    "\n",
+    "Следующие элементы могут быть как блочные, так и встроенные:\n",
+    "```html\n",
+    "iframe  - вставленный фрейм\n",
+    "ins - вставленный текст\n",
+    "map - вставленная карта\n",
+    "object - объект\n",
+    "script - сторонний скрипт\n",
+    "```"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Формы\n",
+    "\n",
+    "```html\n",
+    "<form action=\"url\" method=\"GET\">\n",
+    "<form action=\"url\" method=\"POST\">\n",
+    "```\n",
+    "\n",
+    "Формы с логином и паролем:\n",
+    "```html\n",
+    "<form>\n",
+    "<input type=\"password\" name=\"my_password\" />  - ввод цифр будет не виден\n",
+    "</form>\n",
+    "```\n",
+    "\n",
+    "Формы с выбором из нескольких вариантов:\n",
+    "\n",
+    "```html\n",
+    "<form>\n",
+    "<input type=\"radio\" name=\"language\" value=\"Python\" /> Python\n",
+    "<input type=\"radio\" name=\"language\" value=\"Ruby\"> Ruby\n",
+    "</form>\n",
+    "```\n",
+    "\n",
+    "```html\n",
+    "<form>\n",
+    "<input type=\"checkbox\" name=\"language\" value=\"Python\" /> Python\n",
+    "<input type=\"checkbox\" name=\"language\" value=\"Ruby\"> Ruby\n",
+    "</form>\n",
+    "```\n",
+    "\n",
+    "Отправить изменения:\n",
+    "```html\n",
+    "<form method=\"POST\" action=\"#\">\n",
+    "<input type=\"text\" name=\"name\" >\n",
+    "<input type=\"submit\" name=\"submit\">\n",
+    "</form>\n",
+    "```\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Цвета в HTML\n",
+    "\n",
+    "Шестнадцатеричная система счисления:\n",
+    "\n",
+    "0, 1, 2, 3, 4, 5, 6, 7, 8, 9, A, B, C, D, E, F\n",
+    "\n",
+    "RGB комбинация цветов.\n",
+    "Первые 2 символа обозначают количество красного цвета, третий и четвертый - количество зеленого,\n",
+    "а пятый и шестой - количество синего.\n",
+    "Например: #FF0000 обозначает красный цвет, где FF означает наличие красного цвета, а 0000 - отсутствие зеленого и синего.\n",
+    "Примеры цветов:\n",
+    "color=\"#FF0000\" - красный\n",
+    "color=\"#00FF00\" - зеленый\n",
+    "color=\"#0000FF\" - синий\n",
+    "color=\"#000000\" - черный"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# HTML5"
    ],
    "metadata": {
     "collapsed": false,
