add html/css materials

--- a/HTML-CSS/Лекция. HTML.ipynb
+++ b/HTML-CSS/Лекция. HTML.ipynb
@@ -337,7 +337,175 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# HTML5"
+    "# HTML5\n",
+    "\n",
+    "Новые элементы в  HTML5:\n",
+    "```html\n",
+    "<article>, <aside>, <audio>, <canvas>, <datalist>, <details>, <embed>, <footer>,\n",
+    "<header>, <nav>, <output>, <progress>, <section>, <video>\n",
+    "и другие\n",
+    "```\n",
+    "\n",
+    "Еще новое в HTML5:\n",
+    "\n",
+    "Формы\n",
+    "- Спецификация Web Forms 2.0 позволяет создавать более мощные формы и более привлекательный пользовательский опыт.\n",
+    "- Добавлены элементы выбора даты, цвета и числового шага.\n",
+    "- Типы полей ввода теперь включают электронную почту, поиск и URL.\n",
+    "- Теперь поддерживаются методы форм PUT и DELETE.\n",
+    "\n",
+    "Интегрированный API\n",
+    "- Аудио и видео\n",
+    "- Автономные веб-приложения\n",
+    "- История\n",
+    "- Локальное хранилище\n",
+    "- Геолокация\n",
+    "- Веб-сообщения"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Виды контент моделей:\n",
+    "- Metadata\n",
+    "- Embedded\n",
+    "- Interactive\n",
+    "- Heading\n",
+    "- Phrasing\n",
+    "- Flow\n",
+    "- Sectioning\n",
+    "\n",
+    "\n",
+    "**Metadata**: Content that sets up the presentation or behavior of the rest of the content. These elements are found in the head of the document.\n",
+    "Elements: ```<base>, <link>, <meta>, <noscript>, <script>, <style>, <title>```\n",
+    "\n",
+    "**Embedded**: Content that imports other resources into the document.\n",
+    "Elements: ```<audio>, <video>, <canvas>, <iframe>, <img>, <math>, <object>, <svg>```\n",
+    "\n",
+    "**Interactive**: Content specifically intended for user interaction.\n",
+    "Elements: ```<a>, <audio>, <video>, <button>, <details>, <embed>, <iframe>, <img>, <input>, <label>, <object>, <select>, <textarea>```\n",
+    "\n",
+    "**Heading**: Defines a section header.\n",
+    "Elements: ```<h1>, <h2>, <h3>, <h4>, <h5>, <h6>, <hgroup>```\n",
+    "\n",
+    "**Phrasing**: This model has a number of inline level elements in common with HTML4.\n",
+    "Elements: ```<img>, <span>, <strong>, <label>, <br />, <small>, <sub>``` and more.\n",
+    "\n",
+    "**Flow content**: Contains the majority of HTML5 elements that would be included in the normal flow of the document.\n",
+    "\n",
+    "**Sectioning content**: Defines the scope of headings, content, navigation, and footers.\n",
+    "Elements: ```<article>, <aside>, <nav>, <section>```"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Структура веб-страницы\n",
+    "\n",
+    "<img src=\"https://api.sololearn.com/DownloadFile?id=2471\">"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Audio and video\n",
+    "\n",
+    "```html\n",
+    "<audio src=\"http://www.sololearn.com/uploads/audio.mp3\" controls>\n",
+    "    Audio element not supported by your browser\n",
+    "</audio>\n",
+    "```\n",
+    "\n",
+    "```html\n",
+    "<audio controls autoplay loop>\n",
+    "    <source src=\"http://www.sololearn.com/uploads/audio.mp3\" type=\"audio/mpeg\">\n",
+    "    <source src=\"http://www.sololearn.com/uploads/audio.ogg\" type=\"audio/ogg\">\n",
+    "</audio>\n",
+    "```\n",
+    "\n",
+    "```html\n",
+    "<video controls>\n",
+    "   <source src=\"http://www.sololearn.com/uploads/video.mp4\" type=\"video/mp4\">\n",
+    "   <source src=\"http://www.sololearn.com/uploads/video.ogg\" type=\"video/ogg\">\n",
+    "   Video is not supported by your browser\n",
+    "</video>\n",
+    "```"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Формы в HTML5\n",
+    "\n",
+    "```html\n",
+    "<form>\n",
+    "    <label>Your name:</label>\n",
+    "    <input id=\"user\" name=\"username\" type=\"text\" />\n",
+    "</form>\n",
+    "```\n",
+    "\n",
+    "```html\n",
+    "<form>\n",
+    "    <label for=\"email\">Your e-mail address: </label>\n",
+    "    <input type=\"text\" name=\"email\" placeholder=\"email@example.com\" />\n",
+    "</form>\n",
+    "```\n",
+    "\n",
+    "В HTML5 добавлен ряд новых input типов:\n",
+    "- color\n",
+    "- date\n",
+    "- datetime\n",
+    "- datetime-local\n",
+    "- email\n",
+    "- month\n",
+    "- number\n",
+    "- range\n",
+    "- search\n",
+    "- tel\n",
+    "- time\n",
+    "- url\n",
+    "- week\n",
+    "\n",
+    "Новые аттрибуты в HTML5:\n",
+    "- autofocus\n",
+    "- form\n",
+    "- formaction\n",
+    "- formenctype\n",
+    "- formmethod\n",
+    "- formnovalidate\n",
+    "- formtarget\n",
+    "- height and width\n",
+    "- list\n",
+    "- min and max\n",
+    "- multiple\n",
+    "- pattern (regexp)\n",
+    "- placeholder\n",
+    "- required\n",
+    "- step"
    ],
    "metadata": {
     "collapsed": false,
