--- a/7. FastAPI/Лекция 7. FastAPI.ipynb
+++ b/7. FastAPI/Лекция 7. FastAPI.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "source": [
+    "Любой разработчик должен быть в состоянии создать API. При помощи API можно"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "pycharm": {
