refactor structure / add parsing files

--- a/HTML-CSS/Лекция. HTML.ipynb
+++ b/HTML-CSS/Лекция. HTML.ipynb
@@ -313,7 +313,7 @@
    "source": [
     "## Цвета в HTML\n",
     "\n",
-    "Шестнадцатеричная система счисления:\n",
+    "Шестнадцатеричная система счисления - HEX:\n",
     "\n",
     "0, 1, 2, 3, 4, 5, 6, 7, 8, 9, A, B, C, D, E, F\n",
     "\n",
